# QML-for-Beginners-Challenges

./: .gitignore  README.md
SolutionProject/: CMakeLists.txt  Main.qml  MenuLabel.qml  MenuSection.qml  attribution.txt  main.cpp
StartingProject/: CMakeLists.txt  Main.qml  attribution.txt
